Resolve #12: Add anchors to headings
- use customized instance of markdown-it
- use the markdown-it-anchor plugin configured for header links
- style the header anchors so they don't look like normal links

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,15 @@ li {
   padding-left: 20px;
 }
 
+.header-anchor {
+  color: inherit;
+  text-decoration: none;
+}
+
+.header-anchor:hover {
+  text-decoration: underline;
+}
+
 @media (prefers-color-scheme: dark) {
   body {
     background-color: #112;
